--- a/manifest.json
+++ b/manifest.json
@@ -45,5 +45,16 @@
     "16": "icons/icon16.png",
     "48": "icons/icon48.png",
     "128": "icons/icon128.png"
-  }
+  },
+  "web_accessible_resources": [
+    {
+      "resources": ["Course-Short-Name.json"],
+      "matches": [
+        "https://*.mycamu.co.in/*",
+        "https://mycamu.co.in/*",
+        "http://localhost:*/*",
+        "https://enroll-mate.vercel.app/*"
+      ]
+    }
+  ]
 }
